@@ -30,7 +30,6 @@ public:
 protected:
   //Signal handlers:
   virtual void on_menu_file_recent_files_dialog();
-  virtual void on_menu_file_recent_files_menu();
   virtual void on_menu_file_quit();
   virtual void on_menu_file_new();
 
