@@ -1,3 +1,10 @@
+2006-07-25  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* examples/book/recent_files/examplewindow.cc:
+	* examples/book/recent_files/examplewindow.h: Fix recent files example so
+	that it actually pops up a dialog when you select the recent files menu
+	item.  Also added _mnemonics to menu items for easy keyboard navigation :)
+
 2006-07-25  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/printing/advanced/printformoperation.cc:
